Wed Apr 23 11:20:40 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* entries.c (ParseTag): Always set *NONBRANCHP.

21 Apr 1997  Jim Kingdon

	* client.c (update_entries), rcs.c (expand_keywords): Rewrite
	test to avoid signed/unsigned warning.

Mon Apr 21 09:02:22 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (patch_file): Add comment about whether auto-detecting
	features of the DIFF program is a good idea.

Mon Apr 21 00:03:34 1997  Ian Lance Taylor  <ian@cygnus.com>

	Don't require the patch program:
	* client.c (struct update_entries_data): Add
	UPDATE_ENTRIES_RCS_DIFF to contents enum.
	(update_entries): Handle UPDATE_ENTRIES_RCS_DIFF.
	(handle_rcs_diff): New static function.
	(responses): Add "Rcs-diff".
	* server.c (server_updated): Handle SERVER_RCS_DIFF.
	(server_use_rcs_diff): New function.
	* server.h (enum server_updated_arg4): Add SERVER_RCS_DIFF.
	(server_use_rcs_diff): Declare.
	* update.c (rcs_diff_patches): New static variable.
	(update): Set rcs_diff_patches.
	(update_fileproc): If rcs_diff_patches, pass SERVER_RCS_DIFF
	rather than SERVER_PATCHED to server_updated.
	(patch_file): Correct initial comment to say diff rather than
	rcsdiff.  If rcs_diff_options, pass -n to diff rather than -c.
	* rcs.c (rcs_change_text): New function.
	* rcs.h (rcs_change_text): Declare.

Mon Apr 21 00:08:59 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* diff.c (diff_fileproc): Add comment concerning updating the
	client timestamp.

Sun Apr 20 23:20:37 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* commit.c (commit): Add comment regarding SEND_FORCE rationale.

Sat Apr 19 17:10:36 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (dirswitch): If directory ends in '/', complain.

Fri Apr 18 18:09:57 1997  Ian Lance Taylor  <ian@cygnus.com>

	* rcs.c (apply_rcs_changes): New static function, broken out of
	RCS_deltas.
	(RCS_deltas): Call it.
	(linevector_add): Change return type to int.  Return an indication